# fable-flow

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  claude.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-requirements.txt  pages.yml
api/core/: index.html
assets/javascripts/: bundle.e71a0d61.min.js
blog/: index.html
blog/archive/2024/: index.html
books/curious_cassie/cassie_caleb_n_magic_of_yet/: CM_story.txt  ED_story.txt  movie_director.txt  music_director.txt
books/curious_cassie/cassie_caleb_n_magic_of_yet/book/: index.html
books/curious_cassie/cassies_harbour_quest/: CM_story.txt  formatted_book.html  image_planner_story.txt  music_director.txt
books/curious_cassie/cassies_harbour_quest/book/: index.html
books/curious_cassie/curious_cassie_beach_ride_quests/: CM_story.txt  CR_story.txt  ED_story.txt  draft_story.txt  formatted_book.html
books/curious_cassie/curious_cassie_beach_ride_quests/book/: index.html
community/: index.html
community/guidelines/: index.html
config/: README.md  default.yaml
contributing/guidelines/: index.html
contributors/: index.html
create/: index.html
create/advanced-guide/: index.html
create/educator-guide/: index.html
create/submit-story/: index.html
curious-cassie/: index.html
docs/: README.md  contributors.md  fableflow-workflow.md  troubleshooting.md
docs/api/: core.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: curiosity_foundation_of_learning.md  fabelflow_release.md
docs/books/curious_cassie/cassie_caleb_n_magic_of_yet/: CR_story.txt  book.md  draft_story.txt  draft_synopsis.txt  formatted_book.html  image_planner_story.txt
docs/books/curious_cassie/cassies_harbour_quest/: CM_story.txt  CR_story.txt  ED_story.txt  book.md  draft_story.txt  draft_synopsis.txt  final_story.txt  formatted_book.html  image_planner_story.txt  movie_director.txt  music_director.txt
docs/books/curious_cassie/curious_cassie_beach_ride_quests/: CM_story.txt  CR_story.txt  book.md  draft_story.txt  draft_synopsis.txt  final_proof_story.txt  final_story.txt  formatted_book.html  image_planner_story.txt  movie_director.txt  music_director.txt
docs/community/: guidelines.md  index.md
docs/contributing/: guidelines.md
docs/create/: advanced-guide.md  educator-guide.md  index.md  submit-story.md
docs/curious-cassie/: index.md
docs/examples/: basic-workflow.md  custom-models.md
docs/features/: book-production.md  illustrations.md  music.md  narration.md  story-processing.md  video-production.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/javascript/: pdf-reader.js
docs/references/: refs.bib
docs/stories/: index.md
examples/basic-workflow/: index.html
examples/custom-models/: index.html
fableflow-workflow/: index.html
features/book-production/: index.html
features/illustrations/: index.html
features/music/: index.html
features/narration/: index.html
features/story-processing/: index.html
features/video-production/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
javascript/: epub-reader.js  katex.js
producer/fable_flow/: agents.py  app.py  book_structure.py  book_utils.py  client.py  common.py  config.py  continuation.py  epub.py  illustrator.py  models.py  movie.py  music.py  narration.py  pdf.py  publisher.py  story.py  story_formatter.py
search/: search_index.json
stories/: index.html
studio/: .gitignore  README.md  api.py
studio/web-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
studio/web-ui/src/: App.jsx
studio/web-ui/src/components/: Header.jsx  ImageEditor.jsx  NewProjectModal.jsx  (+1 more)
stylesheets/: custom.css
tests/: conftest.py  test_book_metadata.py  test_config.py  test_illustrator.py  test_movie.py  test_music.py  test_publisher.py  test_story.py
troubleshooting/: index.html
(+9 files in other folders)
