[project]
name = "fable-flow"
version = "0.1.0"
description = "An AI-powered story generation and multimedia creation system"
authors = [
    {name = "Fable Flow Team"}
]
dependencies = [
    # Core dependencies
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "omegaconf>=2.3.0",
    "typer>=0.9.0",
    
    # AI/ML Core
    "autogen-core>=0.1.0",
    "autogen-ext>=0.1.0",
    "tiktoken>=0.12.0",
    "transformers>=4.52.0",
    "torch>=2.6.0",
    "numpy>=1.24.0,<2.0.0",  # Compatible with numba and gruut
    "diffusers>=0.33.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "xformers>=0.0.23",
    "sentencepiece>=0.1.99",
    "protobuf>=4.21.6,<5.0.0",  # Compatible with grpcio-tools
    "networkx>=2.5.0,<3.0.0",  # Compatible with gruut
    "wrapt>=1.10,<2.0",  # Compatible with deprecated
    
    # Audio processing
    "kokoro>=0.9.2",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "torchaudio>=2.6.0",
    
    # Video/Image processing
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    
    # File I/O and web
    "aiofiles>=25.1.0",
    "httpx>=0.25.0",

    # Web API (optional)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    
    # PDF generation
    "reportlab>=4.0.0",
    "beautifulsoup4>=4.12.0",
    
    # CLI and display
    "rich>=13.0.0",
    "tqdm>=4.65.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Elastic-2.0"}

[project.scripts]
fable-flow = "fable_flow.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "types-aiofiles>=23.0.0",
    "types-beautifulsoup4>=4.12.0"
]
docs = [
    # Core MkDocs
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    
    # MkDocs plugins used in mkdocs.yml
    "mkdocs-blog-plugin<=0.25",
    "mkdocs-rss-plugin>=1.12.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-bibtex>=2.11.0",
    
    # Optional optimization plugin (commented out in mkdocs.yml)
    # "mkdocs-optimize-plugin>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["producer/fable_flow"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "build/",
    "dist/",
    "site/",
    "docs/"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "F401",  # Imported but unused (handled by other tools)
]

[tool.ruff.lint.isort]
known-first-party = ["fable_flow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=fable_flow --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "function: Function tests",
    "asyncio: Async tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"